Update record category presets
This patch has 4 updates to the record category presets:
1) browser has been dropped from the Web Developer preset.
2) "Graphics and rendering" has been simplified to just "Rendering"
3) Graphics, rendering, and rasterization has been renamed "Frame Viewer"
4) A new category has been added for fancy web devs: "Javascript and rendering"

TBR=nduca

Review URL: https://codereview.appspot.com/118500044

--- a/trunk/trace_viewer/about_tracing/record_selection_dialog.html
+++ b/trunk/trace_viewer/about_tracing/record_selection_dialog.html
@@ -150,13 +150,15 @@ tvcm.exportTo('about_tracing', function() {
 
   var DEFAULT_PRESETS = [
     {title: 'Web developer',
-      categoryFilter: ['blink', 'browser', 'cc', 'net', 'v8']},
+      categoryFilter: ['blink', 'cc', 'net', 'v8']},
     {title: 'Input latency',
       categoryFilter: ['benchmark', 'input']},
-    {title: 'Graphics and rendering',
+    {title: 'Rendering',
       categoryFilter: ['blink', 'cc', 'gpu']},
-    {title: 'Graphics, rendering, and rasterization',
-      categoryFilter: ['blink', 'cc', 'gpu',
+    {title: 'Javascript and rendering',
+      categoryFilter: ['blink', 'cc', 'gpu', 'v8']},
+    {title: 'Frame Viewer',
+      categoryFilter: ['blink', 'cc', 'gpu', 'v8',
         'disabled-by-default-cc.debug']},
     {title: 'Manually select settings',
       categoryFilter: []}
