Adjust timeline input events to be positioned relative to the canvas
This patch changes how input events are adjusted to take into account
additional positioning on the timeline canvas itself. For example, if
the timeline view has margin-left, all timeline selections
would be incorrectly offset.

With this patch, a margin can be put on the timeline view and both
selection and the timing tool work properly.

Additionally, an import has been added to the timing_tool_test so
it can be run standalone. This is unrelated to this patch.

R=nduca@chromium.org

Review URL: https://codereview.appspot.com/120720044

--- a/trunk/trace_viewer/tracing/timeline_track_view.html
+++ b/trunk/trace_viewer/tracing/timeline_track_view.html
@@ -959,14 +959,12 @@ tvcm.exportTo('tracing', function() {
       var hiY = Math.max(eDown.clientY, e.clientY);
       var loX = Math.min(eDown.clientX, e.clientX);
       var hiX = Math.max(eDown.clientX, e.clientX);
-      var tracksContainerBoundingRect =
-          this.modelTrackContainer_.getBoundingClientRect();
-      var topBoundary = tracksContainerBoundingRect.height;
 
       // Convert to worldspace.
       var canv = this.modelTrackContainer_.canvas;
-      var loVX = loX - canv.offsetLeft;
-      var hiVX = hiX - canv.offsetLeft;
+      var worldOffset = canv.getBoundingClientRect().left;
+      var loVX = loX - worldOffset;
+      var hiVX = hiX - worldOffset;
 
       // Figure out what has been selected.
       var selection = new Selection();
