--- a/trunk/trace_viewer/cc/layer_impl.html
+++ b/trunk/trace_viewer/cc/layer_impl.html
@@ -50,6 +50,9 @@ tvcm.exportTo('cc', function() {
                  'idealContentsScale', 'geometryContentsScale',
                  'layoutRects', 'usingGpuRasterization']);
 
+      // Leave gpu memory usage in both places.
+      this.gpuMemoryUsageInBytes = this.args.gpuMemoryUsage;
+
       // Leave bounds in both places.
       this.bounds = tvcm.Rect.fromXYWH(
           0, 0,
