--- a/trunk/trace_viewer/cc/layer_picker.html
+++ b/trunk/trace_viewer/cc/layer_picker.html
@@ -10,6 +10,7 @@ found in the LICENSE file.
 <link rel="import" href="/cc/constants.html">
 <link rel="import" href="/cc/layer_tree_host_impl.html">
 <link rel="import" href="/cc/selection.html">
+<link rel="import" href="/cc/util.html">
 <link rel="import" href="/tracing/analysis/generic_object_view.html">
 <link rel="import" href="/tracing/trace_model/event.html">
 <link rel="import" href="/tvcm/ui/drag_handle.html">
@@ -21,6 +22,7 @@ found in the LICENSE file.
 
 tvcm.exportTo('cc', function() {
   var constants = cc.constants;
+  var bytesToRoundedMegabytes = cc.bytesToRoundedMegabytes;
   var RENDER_PASS_QUADS =
       Math.max(constants.ACTIVE_TREE, constants.PENDING_TREE) + 1;
 
@@ -225,6 +227,12 @@ tvcm.exportTo('cc', function() {
           notesEl.textContent += '(mask)';
         if (layerInfo.isReplicaLayer)
           notesEl.textContent += '(replica)';
+
+        if (layer.gpuMemoryUsageInBytes !== undefined) {
+          var rounded = bytesToRoundedMegabytes(layer.gpuMemoryUsageInBytes);
+          if (rounded !== 0)
+            notesEl.textContent += ' (' + rounded + ' MB)';
+        }
 
         item.layer = layer;
         this.itemList_.appendChild(item);
