--- a/trunk/trace_viewer/cc/layer_tree_impl.html
+++ b/trunk/trace_viewer/cc/layer_tree_impl.html
@@ -5,6 +5,7 @@ Use of this source code is governed by a BSD-style license that can be
 found in the LICENSE file.
 -->
 
+<link rel="import" href="/cc/constants.html">
 <link rel="import" href="/cc/layer_impl.html">
 <link rel="import" href="/tracing/trace_model/object_instance.html">
 
@@ -12,6 +13,8 @@ found in the LICENSE file.
 'use strict';
 
 tvcm.exportTo('cc', function() {
+
+  var constants = cc.constants;
   var ObjectSnapshot = tracing.trace_model.ObjectSnapshot;
 
   /**
@@ -35,6 +38,21 @@ tvcm.exportTo('cc', function() {
           this, ['rootLayer',
             'renderSurfaceLayerList']);
       this.rootLayer.layerTreeImpl = this;
+    },
+
+    otherTree: function() {
+      other = this.whichTree == constants.ACTIVE_TREE ?
+          constants.PENDING_TREE : constants.ACTIVE_TREE;
+      return this.layerTreeHostImpl.getTree(other);
+    },
+
+    get gpuMemoryUsageInBytes() {
+      var totalBytes = 0;
+      this.iterLayers(function(layer) {
+        if (layer.gpuMemoryUsageInBytes !== undefined)
+          totalBytes += layer.gpuMemoryUsageInBytes;
+      });
+      return totalBytes;
     },
 
     iterLayers: function(func, thisArg) {
