--- a/trunk/trace_viewer/tracing/side_panel/sampling_summary_test.html
+++ b/trunk/trace_viewer/tracing/side_panel/sampling_summary_test.html
@@ -76,18 +76,21 @@ tvcm.unittest.testSuite(function() {
                         {
                           category: 'Chrome',
                           name: 'c',
+                          leaf_node_id: 3,
                           size: 10
                         },
                         {
                           name: '<self>',
                           category: 'Chrome',
-                          size: 30
+                          size: 30,
+                          leaf_node_id: 2
                         }
                       ]
                     },
                     {
                       category: 'GPU Driver',
                       name: 'd',
+                      leaf_node_id: 4,
                       size: 20
                     }
                   ]
@@ -139,6 +142,7 @@ tvcm.unittest.testSuite(function() {
                     {
                       category: 'GPU Driver',
                       name: 'd',
+                      leaf_node_id: 4,
                       size: 9
                     }
                   ]
@@ -181,6 +185,7 @@ tvcm.unittest.testSuite(function() {
                     {
                       category: 'GPU Driver',
                       name: 'd',
+                      leaf_node_id: 4,
                       size: 16
                     }
                   ]
